Order models Layout updated Create subscribers

--- a/WaterCompany/Views/Account/Login.cshtml
+++ b/WaterCompany/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 <br />
 <br />
 <h1 style="text-align:center;">Login</h1>
-<hr />
+<hr class="center-ball"/>
 <br />
     <div class="container py-5 h-100">
         <div class="row d-flex align-items-center justify-content-center h-100">
@@ -15,7 +15,7 @@
                      class="img-fluid" alt="Phone image">
             </div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-                <form method="post">
+            <form class="form123" method="post">
                     <div asp-validation-summary="ModelOnly"></div>
                     <div class="form-outline mb-4">
                         <label asp-for="Username">Username</label>
