--- a/WaterCompany/Views/Clients/Details.cshtml
+++ b/WaterCompany/Views/Clients/Details.cshtml
@@ -8,7 +8,7 @@
 <br />
 
 <h1 style="text-align:center;">Client Details</h1>
-<hr />
+<hr class="center-ball"/>
 <br />
 <div class="centerform">
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary"><i class="fas fa-pen-square"></i></a>
