--- a/WaterCompany/Views/Clients/Edit.cshtml
+++ b/WaterCompany/Views/Clients/Edit.cshtml
@@ -7,11 +7,11 @@
 <br />
 
 <h1 style="text-align:center;">Edit Client</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="row centerform">
     <div class="col-md-12">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form class="form123" asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ImageId" />
