--- a/WaterCompany/Views/Contracts/Details.cshtml
+++ b/WaterCompany/Views/Contracts/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Contract</h4>
-    <hr />
+    <hr class="center-ball" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Client.FullName)
