--- a/WaterCompany/Views/Countries/Details.cshtml
+++ b/WaterCompany/Views/Countries/Details.cshtml
@@ -6,6 +6,7 @@
 
 <br />
 <h1 style="text-align: center; font-family: 'Lucida Handwriting'"><b>Details</b></h1>
+<hr class="center-ball" />
 <br />
 <div>
     <dl class="dl-horizontal">
