--- a/WaterCompany/Views/Countries/EditCity.cshtml
+++ b/WaterCompany/Views/Countries/EditCity.cshtml
@@ -1,12 +1,12 @@
 ﻿@model WaterCompany.Data.Entities.City
 <br />
 <h1 style="font-family: 'Lucida Handwriting'; text-align: center">Edit City</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditCity">
+        <form class="form123" asp-action="EditCity">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
 
