--- a/WaterCompany/Views/Countries/Index.cshtml
+++ b/WaterCompany/Views/Countries/Index.cshtml
@@ -6,7 +6,7 @@
 
 <br />
 <h1 style="font-family: 'Lucida Sans'; text-align: center">Countries</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <p class="create">
     <a asp-action="Create"><i style="font-size: 35px" class="fas fa-plus"></i></a>
