--- a/WaterCompany/Views/Employees/Delete.cshtml
+++ b/WaterCompany/Views/Employees/Delete.cshtml
@@ -9,10 +9,10 @@
 <h1 style="text-align:center;">Delete Employee</h1>
 <br />
 <h3 style="text-align:center;"><b>Are you sure you want to delete this employee?</b></h3>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="centerform">
-    <form asp-action="Delete">
+    <form class="form123" asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <button type="submit" class="btn btn-outline-primary"><i class="fas fa-trash-alt"></i></button>
         <a class="btn btn-outline-primary" asp-action="Index"><i class="fas fa-backward"></i></a>
