--- a/WaterCompany/Views/Home/ContactUs.cshtml
+++ b/WaterCompany/Views/Home/ContactUs.cshtml
@@ -4,7 +4,7 @@
 <br />
 <br />
 <h1 class="text-center big-title1"><i class="fas fa-address-card"></i> Contact Us</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <br />
 <div class="row centerform">
