--- a/WaterCompany/Views/Home/Offers.cshtml
+++ b/WaterCompany/Views/Home/Offers.cshtml
@@ -4,7 +4,7 @@
 <br />
 <br />
 <h1 class="text-center big-title1">Offers</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="container mt-5 mb-5" align="center">
     <div class="d-flex justify-content-center row">
