--- a/WaterCompany/Views/Invoices/Edit.cshtml
+++ b/WaterCompany/Views/Invoices/Edit.cshtml
@@ -7,10 +7,10 @@
 <h1>Edit</h1>
 
 <h4>Invoice</h4>
-<hr />
+<hr class="center-ball" />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form class="form123" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
