--- a/WaterCompany/Views/Subscribers/Create.cshtml
+++ b/WaterCompany/Views/Subscribers/Create.cshtml
@@ -7,10 +7,10 @@
 <h1>Create</h1>
 
 <h4>Subscriber</h4>
-<hr />
+<hr class="center-ball"/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form class="form123" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
