--- a/WaterCompany/Views/Users/Index.cshtml
+++ b/WaterCompany/Views/Users/Index.cshtml
@@ -11,7 +11,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title">Users <br /><br /></h1>
+<h1 class="big-title">Users <br /><hr class="center-ball" /><br /></h1>
 
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
