--- a/WaterCompany/Views/Account/ChangePassword.cshtml
+++ b/WaterCompany/Views/Account/ChangePassword.cshtml
@@ -8,10 +8,10 @@
 <br />
 <br />
 <h1 class="big-title"><i class="fas fa-key"></i> Change Password</h1>
-<hr />
+<hr class="center-ball"/>
 <br />
 <div class="centerform">
-    <form method="post">
+    <form class="form123" method="post">
         <div asp-validation-summary="ModelOnly"></div>
         <div class="row g-1">
             <div class="col">
