--- a/WaterCompany/Views/Account/ChangeUser.cshtml
+++ b/WaterCompany/Views/Account/ChangeUser.cshtml
@@ -1,49 +1,73 @@
 ﻿@model WaterCompany.Models.ChangeUserViewModel
+
 @{
     ViewData["Title"] = "ChangeUser";
 }
-<br />
-<h2 align="center">ChangeUser</h2>
 
-<div class="row">
-    <div class="col-md-4 offset-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly"></div>
-            <div class="form-group">
-                <label asp-for="FirstName">First Name</label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-warning"></span>
+<link href="~/css/changeUser.css" rel="stylesheet" />
+<br />
+<br />
+<h1 class="big-title1" align="center"><i class="fas fa-exchange-alt"></i> Manage Account</h1>
+<hr class="center-ball" />
+<form class="centerform" method="post">
+    <div asp-validation-summary="ModelOnly"></div>
+    <div class="wrapper bg-white mt-sm-5">
+        <b>Profile Photo</b><br />
+        <p style="font-size: 15px; color: gray;" class="text-center card-text centerform">Preferably accepted file type .png</p>
+        <input type="file" class="btn button border" placeholder="Upload" /><br /><br />
+        <img src="https://images.pexels.com/photos/1037995/pexels-photo-1037995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+             class="img123" alt="">
+        <div class="py-2">
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label asp-for="FirstName">First Name</label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-warning"></span>
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label asp-for="LastName">Last Name</label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-warning"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName">Last Name</label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-warning"></span>
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label class="form-label" asp-for="CountryId" class="control-label"></label>
+                    <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
+                    <span asp-validation-for="CountryId" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-outline flex-fill mb-0">
-                <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-outline flex-fill mb-0">
-                <label class="form-label" asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
-                <span asp-validation-for="CountryId" class="text-danger"></span>
-            </div>
-            <div class="form-outline flex-fill mb-0">
+            <div class="centerform">
                 <label class="form-label" asp-for="CityId" class="control-label"></label>
                 <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
                 <span asp-validation-for="CityId" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
-                <a asp-action="ChangePassword" class="btn btn-success">Change Password</a>
+            <div class="py-3 pb-4 centerform">
+                <button type="submit" value="Update" class="btn btn-outline-primary"><i class="far fa-save"></i> Save Changes</button>
+                <a asp-action="ChangePassword" class="btn btn-outline-success"><i class="fas fa-key"></i> Change Password</a>
             </div>
-
-            <div class="text-success">@ViewBag.UserMessage</div>
-        </form>
+            @*<div class="d-sm-flex align-items-center pt-3" id="deactivate">
+            <div>
+            <b>Deactivate your account</b>
+            <p>Details about your company account and password</p>
+            </div>
+            <div class="ml-auto">
+            <button class="btn danger">Deactivate</button>
+            </div>
+            </div>*@
+        </div>
     </div>
-</div>
+    <div class="text-success">@ViewBag.UserMessage</div>
+</form>
+<br />
+<br />
+<br />
 
 @section Scripts {
     @{
