--- a/WaterCompany/Views/Account/RecoverPassword.cshtml
+++ b/WaterCompany/Views/Account/RecoverPassword.cshtml
@@ -5,12 +5,12 @@
 }
 <br />
 <h1 style="font-family: 'Lucida Handwriting'; text-align: center">Recover Password</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <form method="post">
+        <form class="form123" method="post">
             <div asp-validation-summary="ModelOnly"></div>
 
             <div class="form-group">
