--- a/WaterCompany/Views/Account/Register.cshtml
+++ b/WaterCompany/Views/Account/Register.cshtml
@@ -4,79 +4,95 @@
 }
 <br />
 <br />
-<div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-12 col-xl-11">
-            <div class="text-center card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5">
-                    <div class="row justify-content-center">
-                        <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                            <form method="post" class="text-center mx-1 mx-md-4">
-                                <div asp-validation-summary="ModelOnly"></div>
-                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-                                <div class="text-center form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="FirstName">First Name</label>
-                                    <input asp-for="FirstName" class="form-control" />
-                                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                                </div>
-                                <div class="text-center form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="LastName">Last Name</label>
-                                    <input asp-for="LastName" class="form-control" />
-                                    <span asp-validation-for="LastName" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="Username">Username</label>
-                                    <input asp-for="Username" class="form-control" />
-                                    <span asp-validation-for="Username" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="Email">Email</label>
-                                    <input asp-for="Email" class="form-control" />
-                                    <span asp-validation-for="Email" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
-                                    <input asp-for="PhoneNumber" class="form-control" />
-                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                                </div>
-                                 <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="CountryId" class="control-label"></label>
-                                    <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
-                                    <span asp-validation-for="CountryId" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="CityId" class="control-label"></label>
-                                    <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
-                                    <span asp-validation-for="CityId" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="Password">Password</label>
-                                    <input type="password" asp-for="Password" class="form-control" />
-                                    <span asp-validation-for="Password" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
-                                    <label class="form-label" asp-for="Confirm">Confirm</label>
-                                    <input asp-for="Confirm" type="password" class="form-control" />
-                                    <span asp-validation-for="Confirm" class="text-danger"></span>
-                                </div>
-                                <br />
-                                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4" style="padding-right: 25px;">
-                                    <button type="submit" value="Register New User" class="btn btn-outline-primary btn-lg"><i class="fas fa-folder-plus"></i></button>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2" style="padding-top: 55px;">
-
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                 class="img-fluid" alt="Sample image">
-
-                        </div>
+<h1 class="text-center big-title1">Sign Up</h1>
+<br />
+<hr class="center-ball">
+<br />
+<br />
+<form method="post">
+    <div asp-validation-summary="ModelOnly"></div>
+    <div class="card text-black" style="border-radius: 5px; box-shadow: rgba(0,0,0,0.35) 0 5px 25px;">
+        <div class="card-body">
+            <br />
+            <div class="row g-3">
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="FirstName">First Name</label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="LastName">Last Name</label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="Username">Username</label>
+                        <input asp-for="Username" class="form-control" />
+                        <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                 </div>
             </div>
+            <br />
+            <div class="row g-3">
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="Email">Email</label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
+                        <input asp-for="PhoneNumber" class="form-control" />
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="CountryId" class="control-label"></label>
+                        <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
+                        <span asp-validation-for="CountryId" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="row g-3">
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="CityId" class="control-label"></label>
+                        <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
+                        <span asp-validation-for="CityId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="Password">Password</label>
+                        <input type="password" asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label class="form-label" asp-for="Confirm">Confirm</label>
+                        <input asp-for="Confirm" type="password" class="form-control" />
+                        <span asp-validation-for="Confirm" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <br />
+            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4" style="padding-right: 25px;">
+                <button type="submit" value="Register New User" class="btn btn-outline-primary btn-lg"><i class="fas fa-folder-plus"></i> Add Account</button>
+            </div>
         </div>
     </div>
-</div>
+</form>
 <div class="text-success">
     <p>
         @ViewBag.Message
