--- a/WaterCompany/Views/Account/ResetPassword.cshtml
+++ b/WaterCompany/Views/Account/ResetPassword.cshtml
@@ -5,12 +5,12 @@
 }
 <br />
 <h1 style="font-family: 'Lucida Handwriting'; text-align: center">Reset Your Password</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <form method="post">
+        <form class="form123" method="post">
             <div asp-validation-summary="All"></div>
             <input type="hidden" asp-for="Token" />
 
