--- a/WaterCompany/Views/Clients/Create.cshtml
+++ b/WaterCompany/Views/Clients/Create.cshtml
@@ -7,11 +7,11 @@
 <br />
 
 <h1 style="text-align:center;">New Client</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="row centerform">
     <div class="col-md-12">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form class="form123" asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
