--- a/WaterCompany/Views/Clients/Index.cshtml
+++ b/WaterCompany/Views/Clients/Index.cshtml
@@ -10,7 +10,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title">Clients <br /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
+<h1 class="big-title">Clients <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
 
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
