--- a/WaterCompany/Views/Consumptions/Details.cshtml
+++ b/WaterCompany/Views/Consumptions/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Consumption</h4>
-    <hr />
+    <hr class="center-ball" />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ConsumptionDate)
