--- a/WaterCompany/Views/Contracts/Create.cshtml
+++ b/WaterCompany/Views/Contracts/Create.cshtml
@@ -7,10 +7,10 @@
 <h1>Create</h1>
 
 <h4>Contract</h4>
-<hr />
+<hr class="center-ball" />
 <div class="row centerform">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form class="form123" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" align="center">
                 <label asp-for="ClientId" class="control-label"></label>
