--- a/WaterCompany/Views/Countries/AddCity.cshtml
+++ b/WaterCompany/Views/Countries/AddCity.cshtml
@@ -2,11 +2,11 @@
 
 <br />
 <h1 style="font-family: 'Lucida Handwriting'; text-align: center">Add City</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddCity">
+        <form class="form123" asp-action="AddCity">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CountryId" />
 
