--- a/WaterCompany/Views/Countries/Create.cshtml
+++ b/WaterCompany/Views/Countries/Create.cshtml
@@ -5,12 +5,12 @@
 }
 <br />
 <h1 style="font-family: 'Lucida Sans'; text-align: center">Create Country</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <flash dismissable="true" />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form class="form123" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
