--- a/WaterCompany/Views/Countries/Edit.cshtml
+++ b/WaterCompany/Views/Countries/Edit.cshtml
@@ -6,11 +6,11 @@
 
 <br />
 <h1 style="font-family: 'Lucida Sans'; text-align: center">Edit Country</h1>
-<hr />
+<hr class="center-ball" />
 <br />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form class="form123" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
