--- a/WaterCompany/Views/Employees/Index.cshtml
+++ b/WaterCompany/Views/Employees/Index.cshtml
@@ -10,8 +10,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title">Employees <br /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
-
+<h1 class="big-title">Employees <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
