--- a/WaterCompany/Views/Invoices/Delete.cshtml
+++ b/WaterCompany/Views/Invoices/Delete.cshtml
@@ -9,7 +9,7 @@
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Invoice</h4>
-    <hr />
+    <hr class="center-ball" />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InvoiceDate)
