--- a/WaterCompany/Views/Roles/Index.cshtml
+++ b/WaterCompany/Views/Roles/Index.cshtml
@@ -10,7 +10,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title">Roles <br /><br /></h1>
+<h1 class="big-title">Roles <br /><hr class="center-ball" /><br /></h1>
 
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
@@ -30,10 +30,11 @@
             }
         </tbody>
     </table>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
