--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -11,7 +11,6 @@
     <link href="https://stackpath.bootstrappcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/dark-mode.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <!-- Syncfusion ASP.NET Core controls styles -->
     <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.3.47/fluent.css" />
 </head>
 <body>
@@ -25,7 +24,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav ml-auto navbar-right-top flex-grow-1">
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
                         </li>
                         <li class="nav-item">
@@ -53,6 +52,7 @@
                                     <a class="dropdown-item" asp-controller="Employees" asp-action="Index"><i class="fas fa-user-secret"></i> Employees</a>
                                     <a class="dropdown-item" asp-controller="Invoices" asp-action="Index"><i class="fas fa-file-invoice-dollar"></i> Invoices</a>
                                     <a class="dropdown-item" asp-controller="Consumptions" asp-action="Index"><i class="fas fa-tint"></i> Consumptions</a>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="Index"><i class="fas fa-sort-amount-down"></i> Orders</a>
                                 </div>
                             </li>
                         }
@@ -66,9 +66,9 @@
                                 <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
                                 <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                     <div class="nav-user-info" style="background-color:#007bff;">
-                                        <a class="mb-0 text-white nav-user-name" asp-controller="Account" asp-action="ChangeUser" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
+                                        <a class="mb-0 text-white nav-user-name" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
                                     </div>
-                                    <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Account</a>
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="ChangeUser"><i class="fas fa-user mr-2"></i>Account</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
                                     <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="fas fa-power-off mr-2"></i> Logout</a>
                                 </div>
@@ -103,15 +103,10 @@
                             </ul>
                         </li>
                         <li class="navbar">
-                            <h3 class="navbar-brand mr-auto"></h3>
-                            <nav class="navbar-nav">
-                                <div class="nav-link">
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="darkSwitch" />
-                                        <label class="custom-control-label" for="darkSwitch"></label>
-                                    </div>
-                                </div>
-                            </nav>
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="darkSwitch" />
+                                <label class="custom-control-label" for="darkSwitch"></label>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -125,8 +120,8 @@
         </main>
     </div>
 
-    <!-- Syncfusion ASP.NET Core Script Manager -->
-    <ejs-scripts></ejs-scripts>
+    @*<!-- Syncfusion ASP.NET Core Script Manager -->
+    <ejs-scripts></ejs-scripts>*@
 
     <footer class="text-center text-dark col100 footer2">
         <div class="container pt-4">
@@ -184,7 +179,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/js/dark-mode-switch.min.js"></script>
-    <!-- Syncfusion ASP.NET Core controls scripts -->
     <script src="https://cdn.syncfusion.com/ej2/20.3.47/dist/ej2.min.js"></script>
     <script>
         window.addEventListener('scroll', function () {
