--- a/WaterCompany/wwwroot/css/site.css
+++ b/WaterCompany/wwwroot/css/site.css
@@ -107,8 +107,6 @@ body {
     min-height: 60px;
 }
 
-
-
 .navbar-brand {
     display: inline-block;
     margin-right: 1rem;
@@ -127,10 +125,6 @@ body {
 .navbar-right-top {
 }
 
-    .navbar-right-top .nav-item {
-        border-right: 1px solid #e6e6f2;
-    }
-
         .navbar-right-top .nav-item:last-child {
             border: none;
         }
@@ -142,6 +136,14 @@ body {
             color: #82849f;
         }
 
+
+@media screen and (max-width:1100px) and (min-width: 450px) {
+    .navbar .container {
+        flex-direction: column;
+        text-align: center;
+        align-content: center
+    }
+}
 
 /* --  top-search-bar ---  */
 
@@ -477,10 +479,10 @@ tr {
 .big-title1 {
     font-size: 33px;
     font-weight: bolder;
-    font-family:'Franklin Gothic'
+    font-family: 'Franklin Gothic'
 }
 
-form {
+.form123 {
     text-align: center;
     display: inline-block;
     margin: 20px 0 10px;
@@ -502,7 +504,7 @@ input {
 
 dl {
     margin-bottom: 50px;
-    /*    border: 1px solid #5f9be3;*/
+
     justify-content: center;
     display: flex;
 }
@@ -547,7 +549,7 @@ dd {
         opacity: 1;
     }
 
-    /*Loading Screen*/
+/*Loading Screen*/
 
 .loader {
     display: inline-block;
@@ -629,3 +631,33 @@ dd {
     height: 1px;
     background: #eee;
 }
+
+.col-sm{
+    margin: 15px 0;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    width: 30%;
+    position: relative;
+    margin: 30px auto;
+}
+
+.center-ball {
+    background-color: #007bff;
+}
+
+    .center-ball:before {
+        content: "";
+        width: 10px;
+        height: 10px;
+        background: #007bff;
+        display: inline-block;
+        border: 2px solid #007bff;
+        border-radius: 50%;
+        position: absolute;
+        top: -4px;
+        left: 50%;
+        margin: 0 0 0 -3px;
+    }
