--- a/WaterCompany/Views/Account/Register.cshtml
+++ b/WaterCompany/Views/Account/Register.cshtml
@@ -5,7 +5,6 @@
 <br />
 <br />
 <h1 class="text-center big-title1">Sign Up</h1>
-<br />
 <hr class="center-ball">
 <br />
 <br />
@@ -86,23 +85,33 @@
                 </div>
             </div>
             <br />
-            <br />
-            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4" style="padding-right: 25px;">
-                <button type="submit" value="Register New User" class="btn btn-outline-primary btn-lg"><i class="fas fa-folder-plus"></i> Add Account</button>
+            <div class="row g-2">
+                <div class="col-sm">
+                    <div class="text-center form-outline flex-fill mb-0">
+                        <label asp-for="AccountRole" class="control-label"></label>
+                        <select asp-for="AccountRole" asp-items="Model.Roles" class=" form-control text-center"></select>
+                        <span asp-validation-for="AccountRole" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                <br />
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                        <button type="submit" value="Register New User" class="btn btn-outline-primary btn-lg"><i class="fas fa-folder-plus"></i> Add Account</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </form>
+<br />
+<br />
+<br />
 <div class="text-success">
     <p>
         @ViewBag.Message
     </p>
 </div>
-<br />
-<br />
-<br />
-<br />
-<br />
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
