--- a/WaterCompany/Views/Home/Index.cshtml
+++ b/WaterCompany/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                         @if (this.User.Identity.IsAuthenticated && !(this.User.IsInRole("Admin")))
                         {
                             <h1>Hello, @this.User.Identity.Name!</h1>
-                            <h1>Welcome back to Next Level.</h1>
+                            <h1>Welcome to Next Level.</h1>
                         }
                         @if (!(this.User.Identity.IsAuthenticated))
                         {
