--- a/WaterCompany/Views/Orders/Index.cshtml
+++ b/WaterCompany/Views/Orders/Index.cshtml
@@ -10,7 +10,8 @@
 <br />
 <br />
 <br />
-<h1 class="big-title">Orders <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
+<h1 class="big-title">Orders <br /><hr class="center-ball" /><br /><a asp-action="Create" asp-controller="Orders" class="btn btn-outline-primary"><i class="far fa-plus-square"></i></a></h1>
+
 
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
@@ -29,7 +30,7 @@
                     @Html.DisplayNameFor(model => model.DeliveryDate)
                 </th>
                 @*<th>
-                    @Html.DisplayNameFor(model => model.Lines)
+                @Html.DisplayNameFor(model => model.Lines)
                 </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.UnitaryValue)
@@ -57,8 +58,8 @@
                         @Html.DisplayFor(modelItem => item.DeliveryDate)
                     </td>
                     @*<td style="vertical-align: middle">
-                        @Html.DisplayFor(modelItem => item.Lines)
-                    </td>*@
+                @Html.DisplayFor(modelItem => item.Lines)
+                </td>*@
                     <td style="vertical-align: middle">
                         @Html.DisplayFor(modelItem => item.UnitaryValue)
                     </td>
