Update Contracts Update NotFound Template Update Change User Update Error View Update Register View Updated Layout

--- a/WaterCompany/Views/Contracts/ContractNotFound.cshtml
+++ b/WaterCompany/Views/Contracts/ContractNotFound.cshtml
@@ -3,5 +3,18 @@
     ViewData["Title"] = "ContractNotFound";
 }
 
-<h1>ContractNotFound</h1>
+<link rel="stylesheet" href="~/css/notfound.css"/>
+<br /><br /><br /><br /><br /><br /><br /><br />
+<div class="site">
+	<div class="sketch">
+		<div class="bee-sketch red"></div>
+		<div class="bee-sketch blue"></div>
+	</div>
 
+<h1 class="crap">404<br />Contract Not Found</h1>
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
