--- a/WaterCompany/Views/Contracts/Create.cshtml
+++ b/WaterCompany/Views/Contracts/Create.cshtml
@@ -3,53 +3,54 @@
 @{
     ViewData["Title"] = "Create";
 }
+<br />
+<br />
 
-<h1>Create</h1>
-
-<h4>Contract</h4>
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-file-alt"></i> New Contract</h1>
 <hr class="center-ball" />
+<br />
 <div class="row centerform">
-    <div class="col-md-4">
-        <form class="form123" asp-action="Create">
+    <div class="col-md-12">
+        <form class="form123" asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group" align="center">
-                <label asp-for="ClientId" class="control-label"></label>
-                <select asp-for="ClientId" asp-items="Model.Clients" class=" form-control text-center"></select>
-                <span asp-validation-for="ClientId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PostalCode" class="control-label"></label>
-                <input asp-for="PostalCode" class="form-control" />
-                <span asp-validation-for="PostalCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContractDate" class="control-label"></label>
-                <input asp-for="ContractDate" class="form-control" />
-                <span asp-validation-for="ContractDate" class="text-danger"></span>
-            </div>
-           @* <div class="form-group">
-                <label asp-for="ContractTypeId" class="control-label"></label>
-                <select asp-for="ContractTypeId" asp-items="Model.ContractTypes" class="form-control text-center"></select>
-                <span asp-validation-for="ContractTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PaymentTypeId" class="control-label"></label>
-                <select asp-for="PaymentTypeId" asp-items="Model.PaymentTypes" class="form-control text-center"></select>
-                <span asp-validation-for="PaymentTypeId" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="card text-black" style="border-radius: 5px; box-shadow: rgba(0,0,0,0.35) 0 5px 25px;">
+                <div class="card-body">
+                    <br />
+                    <div class="form-group">
+                        <label asp-for="ClientId" class="control-label"></label>
+                        <select asp-for="ClientId" asp-items="Model.Clients" class=" form-control text-center"></select>
+                        <span asp-validation-for="ClientId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Address" class="control-label"></label>
+                        <input asp-for="Address" class="form-control" />
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="PostalCode" class="control-label"></label>
+                        <input asp-for="PostalCode" class="form-control" />
+                        <span asp-validation-for="PostalCode" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ContractDate" class="control-label"></label>
+                        <input asp-for="ContractDate" class="form-control" />
+                        <span asp-validation-for="ContractDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <br />
+                        <button type="submit" value="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> Create Contract</button>
+                        <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
+<br />
+<br />
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
