--- a/WaterCompany/Views/Account/ChangeUser.cshtml
+++ b/WaterCompany/Views/Account/ChangeUser.cshtml
@@ -11,56 +11,67 @@
 <hr class="center-ball" />
 <form class="centerform" method="post">
     <div asp-validation-summary="ModelOnly"></div>
+    <input type="hidden" asp-for="ImageId" />
     <div class="wrapper bg-white mt-sm-5">
         <b>Profile Photo</b><br />
         <p style="font-size: 15px; color: gray;" class="text-center card-text centerform">Preferably accepted file type .png</p>
-        <input type="file" class="btn button border" placeholder="Upload" /><br /><br />
-        <img src="https://images.pexels.com/photos/1037995/pexels-photo-1037995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-             class="img123" alt="">
+        <div class="form-group">
+            <input asp-for="ImageFile" class="form-control text-center" type="file" placeholder="" />
+        </div>
+        <div class="form-group">
+            <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width: auto; height: 70px;" />
+        </div>
         <div class="py-2">
             <div class="row py-2">
                 <div class="col-md-6">
                     <label asp-for="FirstName">First Name</label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-warning"></span>
+                    <input asp-for="FirstName" class="form-control text-center" />
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label asp-for="LastName">Last Name</label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-warning"></span>
+                    <input asp-for="LastName" class="form-control text-center" />
                 </div>
             </div>
             <div class="row py-2">
                 <div class="col-md-6">
                     <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
-                    <input asp-for="PhoneNumber" class="form-control" />
-                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    <input asp-for="PhoneNumber" class="form-control text-center" />
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label class="form-label" asp-for="CountryId" class="control-label"></label>
                     <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
-                    <span asp-validation-for="CountryId" class="text-danger"></span>
                 </div>
             </div>
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label asp-for="Address" class="control-label"></label>
+                    <input asp-for="Address" class="form-control text-center" />
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label class="form-label" asp-for="Email">Email</label>
+                    <input asp-for="Email" class="form-control text-center" />
+                </div>
+            </div>
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label asp-for="TIN" class="control-label"></label>
+                    <input asp-for="TIN" class="form-control" />
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label asp-for="PostalCode" class="control-label"></label>
+                    <input asp-for="PostalCode" class="form-control" />
+                </div>
+            </div>
+            <br />
             <div class="centerform">
                 <label class="form-label" asp-for="CityId" class="control-label"></label>
                 <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
-                <span asp-validation-for="CityId" class="text-danger"></span>
             </div>
             <br />
             <div class="py-3 pb-4 centerform">
                 <button type="submit" value="Update" class="btn btn-outline-primary"><i class="far fa-save"></i> Save Changes</button>
                 <a asp-action="ChangePassword" class="btn btn-outline-success"><i class="fas fa-key"></i> Change Password</a>
             </div>
-            @*<div class="d-sm-flex align-items-center pt-3" id="deactivate">
-            <div>
-            <b>Deactivate your account</b>
-            <p>Details about your company account and password</p>
-            </div>
-            <div class="ml-auto">
-            <button class="btn danger">Deactivate</button>
-            </div>
-            </div>*@
         </div>
     </div>
     <div class="text-success">@ViewBag.UserMessage</div>
