--- a/WaterCompany/Views/Contracts/Details.cshtml
+++ b/WaterCompany/Views/Contracts/Details.cshtml
@@ -3,12 +3,19 @@
 @{
     ViewData["Title"] = "Details";
 }
+<br />
+<br />
 
-<h1>Details</h1>
-
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-newspaper"></i> Contract Details</h1>
+<hr class="center-ball" />
+<br />
+<div class="centerform">
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a>
+    <a class="btn btn-outline-primary" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+</div>
+<br />
+<br />
 <div>
-    <h4>Contract</h4>
-    <hr class="center-ball" />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Client.FullName)
@@ -16,39 +23,23 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Client.FullName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PostalCode)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PostalCode)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ContractDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ContractDate)
         </dd>
-        @*<dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContractType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ContractType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PaymentType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentType)
-        </dd>*@
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
