--- a/WaterCompany/Views/Contracts/Edit.cshtml
+++ b/WaterCompany/Views/Contracts/Edit.cshtml
@@ -3,54 +3,56 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<br />
+<br />
 
-<h1>Edit</h1>
-
-<h4>Contract</h4>
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-eraser"></i> Edit Contract</h1>
 <hr class="center-ball" />
-<div class="row">
-    <div class="col-md-4">
+<br />
+<div class="row centerform">
+    <div class="col-md-12">
         <form class="form123" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ClientId" class="control-label"></label>
-                <select asp-for="ClientId" asp-items="Model.Clients" class="form-control text-center" ></select>
-                <span asp-validation-for="ClientId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PostalCode" class="control-label"></label>
-                <input asp-for="PostalCode" class="form-control" />
-                <span asp-validation-for="PostalCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContractDate" class="control-label"></label>
-                <input asp-for="ContractDate" class="form-control" />
-                <span asp-validation-for="ContractDate" class="text-danger"></span>
-            </div>
-            @*<div class="form-group">
-                <label asp-for="ContractType" class="control-label"></label>
-                <input asp-for="ContractType" class="form-control" />
-                <span asp-validation-for="ContractType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PaymentType" class="control-label"></label>
-                <input asp-for="PaymentType" class="form-control" />
-                <span asp-validation-for="PaymentType" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="card text-black" style="border-radius: 5px; box-shadow: rgba(0,0,0,0.35) 0 5px 25px;">
+                <div class="card-body">
+                    <br />
+                    <div class="form-group">
+                        <label asp-for="ClientId" class="control-label"></label>
+                        <select asp-for="ClientId" asp-items="Model.Clients" class="form-control text-center"></select>
+                        <span asp-validation-for="ClientId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Address" class="control-label"></label>
+                        <input asp-for="Address" class="form-control" />
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="PostalCode" class="control-label"></label>
+                        <input asp-for="PostalCode" class="form-control" />
+                        <span asp-validation-for="PostalCode" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ContractDate" class="control-label"></label>
+                        <input asp-for="ContractDate" class="form-control" />
+                        <span asp-validation-for="ContractDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <br />
+                        <button type="submit" value="Save" class="btn btn-outline-primary"><i class="fas fa-save"></i> Save</button>
+                        <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<br />
+<br />
+<br />
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
 
