--- a/WaterCompany/Views/Contracts/Index.cshtml
+++ b/WaterCompany/Views/Contracts/Index.cshtml
@@ -3,64 +3,91 @@
 @{
     ViewData["Title"] = "Index";
 }
+<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" />
 
-<h1>Index</h1>
-<hr class="center-ball" />
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Client.FullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PostalCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContractDate)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.ContractType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PaymentType)
-            </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<br />
+<br />
+<br />
+<br />
+<h1 class="big-title"><i class="fas fa-file-alt"></i> Contracts <br /><hr class="center-ball" /><br /><a asp-action="Create" asp-controller="Contracts" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Contract</a></h1>
+<div class="table-responsive-sm">
+    <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Client.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PostalCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContractDate)
-                </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.ContractType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PaymentType)
-                </td>*@
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th>
+                    <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
+                </th>
+                <th>
+                    <i class="fas fa-address-book"></i> @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th>
+                    <i class="fas fa-mail-bulk"></i> @Html.DisplayNameFor(model => model.PostalCode)
+                </th>
+                <th>
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ContractDate)
+                </th>
+                <th><i class="fas fa-filter"></i> Options</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Client.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PostalCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ContractDate)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>
+                    <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
+                </th>
+                <th>
+                    <i class="fas fa-address-book"></i> @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th>
+                    <i class="fas fa-mail-bulk"></i> @Html.DisplayNameFor(model => model.PostalCode)
+                </th>
+                <th>
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ContractDate)
+                </th>
+                <th><i class="fas fa-filter"></i> Options</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+@section Scripts{
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#MyTable').DataTable();
+        });
+    </script>
+}
