--- a/WaterCompany/Views/Employees/EmployeeNotFound.cshtml
+++ b/WaterCompany/Views/Employees/EmployeeNotFound.cshtml
@@ -2,5 +2,19 @@
     ViewData["Title"] = "EmployeeNotFound";
 }
 
-<h1>EmployeeNotFound</h1>
+<link rel="stylesheet" href="~/css/notfound.css"/>
+<br /><br /><br /><br /><br /><br /><br /><br />
+<div class="site">
+	<div class="sketch">
+		<div class="bee-sketch red"></div>
+		<div class="bee-sketch blue"></div>
+	</div>
+
+<h1 class="crap">404<br />Employee Not Found</h1>
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
 
