--- a/WaterCompany/Views/Clients/Delete.cshtml
+++ b/WaterCompany/Views/Clients/Delete.cshtml
@@ -5,18 +5,19 @@
 }
 <br />
 <br />
-
-<h1 style="text-align:center;">Delete Client</h1> <br />
-<h3 style="text-align:center;"><b>Are you sure you want to delete this client?</b></h3>
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-folder-minus"></i> Delete Client</h1>
 <hr class="center-ball" />
+<br />
+<h3 style="text-align:center;"><b>Are you sure you want to delete this client?</b></h3>
 <br />
 <div class="centerform">
     <form class="form123" asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <button type="submit" class="btn btn-outline-primary"><i class="fas fa-trash-alt"></i></button>
-        <a class="btn btn-outline-primary" asp-action="Index"><i class="fas fa-backward"></i></a>
+        <button type="submit" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</button>
+        <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
     </form>
 </div>
+<br />
 <br />
 <div class="row col align-self-center">
     <div class="col-md-12">
