--- a/WaterCompany/Views/Home/Index.cshtml
+++ b/WaterCompany/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
             </div>
             <form class="text-center form123" method="post">
                 <div class="form-group">
-                    <input asp-for="Email" class="form-control" type="email" name="email" placeholder="Your Email"><br />
+                    <input asp-for="Email" class="form-control" type="email" name="email" placeholder="Your Email" style="border: 1px white solid"><br />
                     <button asp-controller="Subscribers" asp-action="Create" class="btn btn-primary" type="submit">Subscribe </button>
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
