--- a/WaterCompany/Views/Orders/Create.cshtml
+++ b/WaterCompany/Views/Orders/Create.cshtml
@@ -2,73 +2,95 @@
 @{
     ViewData["Title"] = "Create";
 }
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" />
 <br />
 <br />
 <p class="centerform">
     <h1 class="big-title">
-        New Orders<br /><hr class="center-ball" /><br />
-        <a asp-action="AddOffer" class="btn btn-outline-success"><i class="fas fa-cart-plus"></i></a>
-        <a asp-action="ConfirmOrder" class="btn btn-outline-primary" id="btnConfirm"><i class="fas fa-clipboard-check"></i></a>
+        <i class="fas fa-cart-plus"></i> New Orders<br /><hr class="center-ball" /><br />
+        <a asp-action="AddOrder" class="btn btn-outline-success"><i class="fas fa-cart-plus"></i> Add Order</a>
+        <a asp-action="ConfirmOrder" class="btn btn-outline-primary" id="btnConfirm"><i class="fas fa-clipboard-check"></i> Confirm Order</a>
+        <a asp-action="Index" class="btn btn-outline-info"><i class="fas fa-backward"></i> Back to Orders</a>
     </h1>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Offer.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitaryValue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Value)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="table-responsive-sm">
+    <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <thead>
             <tr>
-                <td style="vertical-align: middle">
-                    @Html.DisplayFor(modelItem => item.Offer.Name)
-                </td>
-                <td style="vertical-align: middle">
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td style="vertical-align: middle">
-                    @Html.DisplayFor(modelItem => item.UnitaryValue)
-                </td>
-                <td style="vertical-align: middle">
-                    @Html.DisplayFor(modelItem => item.Value)
-                </td>
-                <td style="vertical-align: middle" id="@item.Id">
-                    <a asp-action="Increase" asp-route-id="@item.Id" class="btn btn-warning"><i class="fas fa-plus"></i></a>
-                    <a asp-action="Decrease" asp-route-id="@item.Id" class="btn btn-info"><i class="fas fa-minus"></i></a>
-                    <a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-danger" id="btnDeleteItem"><i class="fa-solid fa-trash-can"></i></a>
-                </td>
+                <th>
+                    <i class="fab fa-buffer"></i> @Html.DisplayNameFor(model => model.Offer.Name)
+                </th>
+                <th>
+                    <i class="fas fa-tag"></i> @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th>
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                </th>
+                <th>
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.Value)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td style="vertical-align: middle">
+                        @Html.DisplayFor(modelItem => item.Offer.Name)
+                    </td>
+                    <td style="vertical-align: middle">
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td style="vertical-align: middle">
+                        @Html.DisplayFor(modelItem => item.UnitaryValue)
+                    </td>
+                    <td style="vertical-align: middle">
+                        @Html.DisplayFor(modelItem => item.Value)
+                    </td>
+                    <td style="vertical-align: middle" id="@item.Id">
+                        <a asp-action="Increase" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-cart-plus"></i> Increase</a>
+                        <a asp-action="Decrease" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-folder-minus"></i> Decrease</a>
+                        <a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-outline-danger" id="btnDeleteItem"><i class="fas fa-trash-alt"></i> Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>
+                    <i class="fab fa-buffer"></i> @Html.DisplayNameFor(model => model.Offer.Name)
+                </th>
+                <th>
+                    <i class="fas fa-tag"></i> @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th>
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                </th>
+                <th>
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.Value)
+                </th>
+                <th></th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
 <br />
 <br />
 <div id="confirmDialog" class="modal fade">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Confirm Order</h4>
-                <button type="button" class="close" data-dismiss="modal"><i class="fas fa-circle-xmark"></i></button>
+                <h4 class="modal-title"><i class="fas fa-clipboard-check"></i><b> Confirm Order</b></h4>
+                <button type="button" class="close" data-dismiss="modal"><i class="fas fa-times"></i></button>
             </div>
             <div class="modal-body">
-                <p>Do you want to confirm the order ?</p>
+                <p><b>Do you want to confirm the order ?</b></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="btnYesConfirm"><i class="fas fa-circle-check"></i></button>
-                <button type="button" class="btn btn-success" id="btnNoConfirm"><i class="fas fa-circle-minus"></i></button>
+                <button style="text-align: center;" type="button" class="btn btn-danger" id="btnYesConfirm"><i class="fas fa-thumbs-up"></i></button>
+                <button style="text-align: center;" type="button" class="btn btn-success" id="btnNoConfirm"><i class="fas fa-thumbs-down"></i></button>
             </div>
         </div>
     </div>
@@ -78,15 +100,15 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Delete</h4>
-                <button type="button" class="close" data-dismiss="modal"><i class="fas fa-circle-xmark"></i></button>
+                <h4 style="text-align: center;" class="modal-title"><i class="fas fa-trash-alt"></i> Delete</h4>
+                <button type="button" class="close" data-dismiss="modal"><i class="fas fa-times"></i></button>
             </div>
             <div class="modal-body">
-                <p>Do you want to delete product from order ?</p>
+                <p><b>Do you want to delete offer from order ?</b></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="btnYesDelete"><i class="fas fa-circle-check"></i></button>
-                <button type="button" class="btn btn-success" id="btnNoDelete"><i class="fas fa-circle-minus"></i></button>
+                <button style="text-align: center;" type="button" class="btn btn-danger" id="btnYesDelete"><i class="fas fa-thumbs-up"></i></button>
+                <button style="text-align: center;" type="button" class="btn btn-success" id="btnNoDelete"><i class="fas fa-thumbs-down"></i></button>
             </div>
         </div>
     </div>
@@ -122,6 +144,14 @@
             $("#btnYesDelete").click(function () {
                 window.location.href = "/Orders/DeleteItem/" + id;
             });
+        });
+    </script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#MyTable').DataTable();
         });
     </script>
 }
