Add items on detail temp

--- a/WaterCompany/Views/Orders/Create.cshtml
+++ b/WaterCompany/Views/Orders/Create.cshtml
@@ -22,10 +22,10 @@
                     <i class="fab fa-buffer"></i> @Html.DisplayNameFor(model => model.Offer.Name)
                 </th>
                 <th>
-                    <i class="fas fa-tag"></i> @Html.DisplayNameFor(model => model.Price)
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
                 </th>
                 <th>
-                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                    <i class="fas fa-tags"></i> @Html.DisplayNameFor(model => model.Echelon)
                 </th>
                 <th>
                     <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.Value)
@@ -41,10 +41,10 @@
                         @Html.DisplayFor(modelItem => item.Offer.Name)
                     </td>
                     <td style="vertical-align: middle">
-                        @Html.DisplayFor(modelItem => item.Price)
+                        @Html.DisplayFor(modelItem => item.UnitaryValue)
                     </td>
                     <td style="vertical-align: middle">
-                        @Html.DisplayFor(modelItem => item.UnitaryValue)
+                        @Html.DisplayFor(modelItem => item.Echelon)
                     </td>
                     <td style="vertical-align: middle">
                         @Html.DisplayFor(modelItem => item.Value)
@@ -63,10 +63,10 @@
                     <i class="fab fa-buffer"></i> @Html.DisplayNameFor(model => model.Offer.Name)
                 </th>
                 <th>
-                    <i class="fas fa-tag"></i> @Html.DisplayNameFor(model => model.Price)
+                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
                 </th>
                 <th>
-                    <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                    <i class="fas fa-tags"></i> @Html.DisplayNameFor(model => model.Echelon)
                 </th>
                 <th>
                     <i class="fas fa-hand-holding-usd"></i> @Html.DisplayNameFor(model => model.Value)
