--- a/WaterCompany/Views/Orders/AddOrder.cshtml
+++ b/WaterCompany/Views/Orders/AddOrder.cshtml
@@ -14,14 +14,14 @@
 
             <div class="form-group">
                 <label asp-for="OfferId" class="control-label"></label>
-                <select asp-for="OfferId" asp-items="Model.Offers" class="form-control"></select>
+                <select asp-for="OfferId" asp-items="Model.Offers" class="form-control text-center"></select>
                 <span asp-validation-for="OfferId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="UnitaryValue" class="control-label"></label>
-                <input asp-for="UnitaryValue" class="form-control" />
-                <span asp-validation-for="UnitaryValue" class="text-danger"></span>
+                <label asp-for="Echelon" class="control-label"></label>
+                <input asp-for="Echelon" class="form-control text-center" />
+                <span asp-validation-for="Echelon" class="text-danger"></span>
             </div>
 
             <div class="form-group">
