--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -24,15 +24,33 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav ml-auto navbar-right-top flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Offers"><i class="far fa-newspaper"></i> Offers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="ContactUs"><i class="fas fa-envelope"></i> Contact Us</a>
-                        </li>
+                        @if (this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Offers"><i class="far fa-newspaper"></i> Offers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index"><i class="fas fa-sort-amount-down"></i> Orders</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="ContactUs"><i class="fas fa-envelope"></i> Contact Us</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Offers"><i class="far fa-newspaper"></i> Offers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="ContactUs"><i class="fas fa-envelope"></i> Contact Us</a>
+                            </li>
+                        }
                         @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown nav-user">
@@ -68,7 +86,15 @@
                                     <div class="nav-user-info" style="background-color:#007bff;">
                                         <a class="mb-0 text-white nav-user-name" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
                                     </div>
-                                    <a class="dropdown-item" asp-controller="Account" asp-action="ChangeUser"><i class="fas fa-user mr-2"></i>Account</a>
+                                    @if (this.User.IsInRole("Client"))
+                                    {
+                                        <a class="dropdown-item" asp-controller="Clients" asp-action="Edit"><i class="fas fa-user mr-2"></i>Account</a>
+
+                                    }
+                                    @if (this.User.IsInRole("Employee"))
+                                    {
+                                        <a class="dropdown-item" asp-controller="Employees" asp-action="Edit"><i class="fas fa-user mr-2"></i>Account</a>
+                                    }
                                     <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
                                     <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="fas fa-power-off mr-2"></i> Logout</a>
                                 </div>
