--- a/WaterCompany/Views/Orders/Index.cshtml
+++ b/WaterCompany/Views/Orders/Index.cshtml
@@ -24,7 +24,7 @@
                     </th>
                 }
                 <th>
-                    <i class="fas fa-clock"></i> @Html.DisplayNameFor(model => model.OrderDate)
+                    <i class="fas fa-clock"></i> @Html.DisplayNameFor(model => model.OrderDateLocal)
                 </th>
                 <th>
                     <i class="fas fa-clock"></i> @Html.DisplayNameFor(model => model.DeliveryDate)
@@ -52,7 +52,7 @@
                         </th>
                     }
                     <td style="vertical-align: middle">
-                        @Html.DisplayFor(modelItem => item.OrderDate)
+                        @Html.DisplayFor(modelItem => item.OrderDateLocal)
                     </td>
                     <td style="vertical-align: middle">
                         @Html.DisplayFor(modelItem => item.DeliveryDate)
